--- a/docs/selenium/1.环境部署.md
+++ b/docs/selenium/1.环境部署.md
@@ -8,6 +8,7 @@
 将下载好的 chromedriver 放到脚本的同级目录
 
 ```python
+from selenium import webdriver
 def init_driver():
     options = webdriver.ChromeOptions()
     options.add_argument("--disable-blink-features=AutomationControlled")
