--- a/docs/tools/科学上网.md
+++ b/docs/tools/科学上网.md
@@ -9,4 +9,6 @@
 
 1. 下载 <a href="tools/_media/clashX.dmg" target="_blank">ClashX</a> 客户端，安装后运行。
 
+linux 使用clash
 
+http://www.ptbird.cn/ubuntu-2004-clash-for-linux.html
