--- a/docs/selenium/1.环境部署.md
+++ b/docs/selenium/1.环境部署.md
@@ -1,11 +1,15 @@
+# 环境部署
+
 ## 1. 使用 driver 部署
+
+为了驱动浏览器,我们需要下载好与 chrome 浏览器相匹配的 webdriver 版本,通常需要以下两个步骤
 
 - 查看当前系统的 chrome 版本 chrome://settings/help
 - 下载指定的浏览器驱动 https://chromedriver.chromium.org/downloads
 
-使用示例:
+### 1. 手动下载 driver 到指定目录
 
-将下载好的 chromedriver 放到脚本的同级目录
+将下载好的 chromedriver 放到脚本的同级目录,并指定 executable_path
 
 ```python
 from selenium import webdriver
@@ -15,6 +19,8 @@ def init_driver():
     driver = webdriver.Chrome(executable_path="./chromedriver", chrome_options=options,)
     return driver
 ```
+
+### 2. 将 driver 放到 Path 中
 
 那么每次都需要在同级目录放置 chromedriver? 自然不必如此,通过查阅源码:
 
@@ -42,6 +48,25 @@ def init_driver():
     options.add_argument("--disable-blink-features=AutomationControlled")
     driver = webdriver.Chrome(chrome_options=options,)
     return driver
+```
+
+### 3. 使用 webdriver-manager 自动管理 webdriver
+
+我们也可以使用 webdriver-manager 自动下载并安装与系统匹配的 webdriver,而无需手动下载
+
+1. 安装 webdriver-manager
+
+```bash
+pip3 install webdriver-manager
+```
+
+2. 使用示例
+
+```python
+from selenium import webdriver
+from webdriver_manager.chrome import ChromeDriverManager
+
+driver = webdriver.Chrome(ChromeDriverManager().install())
 ```
 
 ## 2. 使用 server 部署
